[tool.poetry]
name = "bananalyzer"
version = "0.8.74"

description = "Open source AI Agent evaluation framework for web tasks 🐒🍌"
authors = ["asim-shrestha <asim.shrestha@hotmail.com>", "awtkns <hello@awtkns.com>"]
readme = "README.md"

[tool.poetry.scripts]
bananalyze = "bananalyzer.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.39.0"
pydantic = "^2.4.2"
pytest-asyncio = "^0.21.1"
deepdiff = "^6.7.0"
pytest = "^7.4.2"
pytest-html = "^4.1.1"
pytest-xdist = "^3.4.0"
tabulate = "^0.9.0"
requests = "^2.31.0"
tarsier = "^0.5.0"
openai = "^1.3.7"
boto3 = "^1.34.19"
psutil = "^5.9.7"
playwright-stealth = "^1.0.6"

[tool.poetry.group.test.dependencies]
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
types-requests = "^2.31.0.10"
types-tabulate = "^0.9.0.3"
ruff = "^0.1.13"

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true
files = "bananalyzer"
exclude = ["tests", "venv"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
