[tool.poetry]
name = "bananalyzer"
version = "0.9.17"

description = "Open source AI Agent evaluation framework for web tasks 🐒🍌"
authors = ["asim-shrestha <asim.shrestha@hotmail.com>", "awtkns <hello@awtkns.com>"]
readme = "README.md"

[tool.poetry.scripts]
bananalyze = "bananalyzer.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.44.0"
pydantic = "^2.7.4"
pytest-asyncio = "^0.21.2"
deepdiff = "^6.7.1"
pytest = "^7.4.4"
pytest-html = "^4.1.1"
pytest-xdist = "^3.6.1"
tabulate = "^0.9.0"
requests = "^2.32.3"
boto3 = "^1.34.136"
psutil = "^5.9.8"
playwright-stealth = "^1.0.6"

[tool.poetry.group.test.dependencies]
pytest-mock = "^3.14.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
types-requests = "^2.32.0.20240622"
types-tabulate = "^0.9.0.20240106"
ruff = "^0.6.1"

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true
files = "bananalyzer"
exclude = ["tests", "venv", "static", "bananalytics"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
