[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["asim-shrestha <asim.shrestha@hotmail.com>"]
readme = "README.md"
packages = [{include = "server"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
bananalyzer = { path = "../" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
